--- a/package.json
+++ b/package.json
@@ -3,6 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@editorjs/checklist": "^1.3.0",
+    "@editorjs/code": "^2.7.0",
+    "@editorjs/editorjs": "^2.23.2",
+    "@editorjs/embed": "^2.5.0",
+    "@editorjs/header": "^2.6.2",
+    "@editorjs/image": "^2.6.2",
+    "@editorjs/inline-code": "^1.3.1",
+    "@editorjs/link": "^2.4.0",
+    "@editorjs/list": "^1.6.2",
+    "@editorjs/marker": "^1.2.2",
+    "@editorjs/nested-list": "^1.0.2",
+    "@editorjs/raw": "^2.3.0",
+    "@editorjs/simple-image": "^1.4.1",
+    "@editorjs/table": "^2.0.1",
+    "@editorjs/underline": "^1.0.0",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
